--- a/index.html
+++ b/index.html
@@ -1,12 +1,100 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <title>Нёрдс</title>
+</head>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<body>
+    <header class="main-header">
+    <nav>
+        <a><img src="https://via.placeholder.com/" width="209" height="90" alt="Логотип студии Нёрдс">
+        </a>
+        <ul>
+            <li><a href="#">Студия</a></li>
+            <li><a href="#">Клиенты</a></li>
+            <li><a href="#">Магазин</a></li>
+            <li><a href="#">Контакты</a></li>
+            <li><a href="#">Корзина</a></li>
+        </ul>
+    </nav>
+    <p>Долго, дорого,<br>скрупулезно.</p>
+    <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
+    <a href="#">УЗНАТЬ БОЛЬШЕ</a>
+    <img src="img/phones.jpg" width="760" height="431" alt="картинка с телефонами справа">
+</header>
 
-  </body>
+<main>
+  <h1>Интернет магазин «Nerds»</h1>
+  <section class="services">
+    <h2>Услуги</h2>
+    <ul>
+            <li><img src="img/web.png" width="300" height="146" alt="Картинка красная"></li>
+            <li><a href="#">ВЕБ-САЙТЫ</a></li>
+            <li><p>Мир никогда не будет прежним<br>после того как увидит ваш сайт!</p></li>
+            <li><a href="#">ЗАКАЗАТЬ</a></li>
+            <li><img src="img/app.png" width="300" height="146" alt="Картинка зеленая с телефонами"></li>
+            <li><a href="#">ПРИЛОЖЕНИЯ</a></li>
+            <li><p>Покорите топ-10 приложений<br>в AppStore и Google Play</p></li>
+            <li><a href="#">ЗАКАЗАТЬ</a></li>
+            <li><img src="img/pres.png" width="300" height="146" alt="Картинка желтая с экраном"></li>
+            <li><a href="#">ПРЕЗЕНТАЦИИ</a></li>
+            <li><p>Вы даже не подозреваете,<br>насколько вы изумительны!</p></li>
+            <li><a href="#">ЗАКАЗАТЬ</a></li>
+    </ul>
+  </section>
+  <section class="about">
+    <h2>О нас</h2>
+    <p>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</p>
+    <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.</p>
+  </section>
+  <section class="companies">
+    <h2>Производители</h2>
+    <p>ВЫПОЛНЯЕМ ЗАКАЗЫ НА РАЗРАБОТКУ:</p>
+    <ul>
+      <li><p>Веб-сайтов любой сложности</p></li>
+      <li><p>Мобильных приложений для iOS и Android</p></li>
+      <li><p>Слайдшоу и видео для корпоративных презентаций</p></li>
+    </ul>
+    </section>
+    <p>С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</p>
+      <table>
+        <tr>
+          <td>146%</td>
+          <td>100%</td>
+          <td>50%</td>
+        </tr>
+        <tr>
+        <th>Уровень<br>cамоотдачи</th>
+        <th>Соблюдение<br>cроков</th>
+        <th>Минимальная<br>предоплата</th>
+      </tr>
+    </table>
+  <section class="partners">
+    <a href="#"><img src="https://via.placeholder.com/" width=" " height=" " alt="Лого Академии перед подвалом"></a>
+    <a href="#"><img src="https://via.placeholder.com/" width=" " height=" " alt="Лого Бородинский перед подвалом"></a>
+    <a href="#"><img src="https://via.placeholder.com/" width=" " height=" " alt="Лого Пинк перед подвалом"></a>
+    <a href="#"><img src="https://via.placeholder.com/" width=" " height=" " alt="Лого Мишка перед подвалом"></a>
+  </section>
+</main>
+
+<footer class="main-footer">
+  <h2>NЁRDS DESIGN STUDIO</h2>
+  <p>191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8<br>тел. +7 (812) 275-75-75</p>
+  <a href="#">НАПИШИТЕ НАМ</a>
+<section class="footer-info">
+  <img src="img/mark.jpg" width="231" height="190" alt="Точка Нёрдс на карте">
+  <img src="img/map.jpg" width="1440" height="416" alt="карта">
+  <ul>
+    <li><a><img src="https://via.placeholder.com/" width=" " height=" " alt="соцсеть VK"></a></li>
+    <li><a><img src="https://via.placeholder.com/" width=" " height=" " alt="соцсеть FB"></a></li>
+    <li><a><img src="https://via.placeholder.com/" width=" " height=" " alt="соцсеть INSTA"></a></li>
+  </ul>
+</section>
+<section class="footer-promo">
+  <p><b>Давайте дружить, это выгодно!</b></p>
+  <p>Скидка 10% для друзей из социальных сетей.</p>
+</section>
+  </footer>
+</body>
 </html>
