--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
   <section class="services">
     <h2>Услуги</h2>
     <ul>
-            <li><img src="img/web.png" width="300" height="146" alt="Картинка красная"></li>
-            <li><a href="#">ВЕБ-САЙТЫ</a></li>
-            <li><p>Мир никогда не будет прежним<br>после того как увидит ваш сайт!</p></li>
-            <li><a href="#">ЗАКАЗАТЬ</a></li>
-            <li><img src="img/app.png" width="300" height="146" alt="Картинка зеленая с телефонами"></li>
-            <li><a href="#">ПРИЛОЖЕНИЯ</a></li>
-            <li><p>Покорите топ-10 приложений<br>в AppStore и Google Play</p></li>
-            <li><a href="#">ЗАКАЗАТЬ</a></li>
-            <li><img src="img/pres.png" width="300" height="146" alt="Картинка желтая с экраном"></li>
-            <li><a href="#">ПРЕЗЕНТАЦИИ</a></li>
-            <li><p>Вы даже не подозреваете,<br>насколько вы изумительны!</p></li>
-            <li><a href="#">ЗАКАЗАТЬ</a></li>
+            <li><img src="img/web.png" width="300" height="146" alt="Картинка красная">
+            <h4>ВЕБ-САЙТЫ</h4>
+            <p>Мир никогда не будет прежним<br>после того как увидит ваш сайт!</p>
+            <a href="#">ЗАКАЗАТЬ</a></li>
+            <li><img src="img/app.png" width="300" height="146" alt="Картинка зеленая с телефонами">
+            <h4>ПРИЛОЖЕНИЯ</h4>
+            <p>Покорите топ-10 приложений<br>в AppStore и Google Play</p>
+            <a href="#">ЗАКАЗАТЬ</a></li>
+            <li><img src="img/pres.png" width="300" height="146" alt="Картинка желтая с экраном">
+            <h4>ПРЕЗЕНТАЦИИ</h4>
+            <p>Вы даже не подозреваете,<br>насколько вы изумительны!</p>
+            <a href="#">ЗАКАЗАТЬ</a></li>
     </ul>
   </section>
   <section class="about">
@@ -71,10 +71,10 @@
       </tr>
     </table>
   <section class="partners">
-    <a href="#"><img src="https://via.placeholder.com/" width=" " height=" " alt="Лого Академии перед подвалом"></a>
-    <a href="#"><img src="https://via.placeholder.com/" width=" " height=" " alt="Лого Бородинский перед подвалом"></a>
-    <a href="#"><img src="https://via.placeholder.com/" width=" " height=" " alt="Лого Пинк перед подвалом"></a>
-    <a href="#"><img src="https://via.placeholder.com/" width=" " height=" " alt="Лого Мишка перед подвалом"></a>
+    <a href="#"><img src="https://via.placeholder.com/" width=" " height=" " alt="Лого Академии"></a>
+    <a href="#"><img src="https://via.placeholder.com/" width=" " height=" " alt="Лого Бородинский"></a>
+    <a href="#"><img src="https://via.placeholder.com/" width=" " height=" " alt="Лого Пинк"></a>
+    <a href="#"><img src="https://via.placeholder.com/" width=" " height=" " alt="Лого Мишка"></a>
   </section>
 </main>
 
@@ -82,7 +82,6 @@
   <h2>NЁRDS DESIGN STUDIO</h2>
   <p>191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8<br>тел. +7 (812) 275-75-75</p>
   <a href="#">НАПИШИТЕ НАМ</a>
-<section class="footer-info">
   <img src="img/mark.jpg" width="231" height="190" alt="Точка Нёрдс на карте">
   <img src="img/map.jpg" width="1440" height="416" alt="карта">
   <ul>
@@ -90,11 +89,10 @@
     <li><a><img src="https://via.placeholder.com/" width=" " height=" " alt="соцсеть FB"></a></li>
     <li><a><img src="https://via.placeholder.com/" width=" " height=" " alt="соцсеть INSTA"></a></li>
   </ul>
-</section>
-<section class="footer-promo">
+<section class="footer-info">
   <p><b>Давайте дружить, это выгодно!</b></p>
   <p>Скидка 10% для друзей из социальных сетей.</p>
 </section>
-  </footer>
+</footer>
 </body>
 </html>
