--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
     <h2>Услуги</h2>
     <ul>
             <li><img src="img/web.png" width="300" height="146" alt="Картинка красная">
-            <h4>ВЕБ-САЙТЫ</h4>
+            <h3>ВЕБ-САЙТЫ</h3>
             <p>Мир никогда не будет прежним<br>после того как увидит ваш сайт!</p>
             <a href="#">ЗАКАЗАТЬ</a></li>
             <li><img src="img/app.png" width="300" height="146" alt="Картинка зеленая с телефонами">
-            <h4>ПРИЛОЖЕНИЯ</h4>
+            <h3>ПРИЛОЖЕНИЯ</h3>
             <p>Покорите топ-10 приложений<br>в AppStore и Google Play</p>
             <a href="#">ЗАКАЗАТЬ</a></li>
             <li><img src="img/pres.png" width="300" height="146" alt="Картинка желтая с экраном">
-            <h4>ПРЕЗЕНТАЦИИ</h4>
+            <h3>ПРЕЗЕНТАЦИИ</h3>
             <p>Вы даже не подозреваете,<br>насколько вы изумительны!</p>
             <a href="#">ЗАКАЗАТЬ</a></li>
     </ul>
@@ -84,12 +84,14 @@
   <a href="#">НАПИШИТЕ НАМ</a>
   <img src="img/mark.jpg" width="231" height="190" alt="Точка Нёрдс на карте">
   <img src="img/map.jpg" width="1440" height="416" alt="карта">
+  <section class="footer-info">
   <ul>
     <li><a><img src="https://via.placeholder.com/" width=" " height=" " alt="соцсеть VK"></a></li>
     <li><a><img src="https://via.placeholder.com/" width=" " height=" " alt="соцсеть FB"></a></li>
     <li><a><img src="https://via.placeholder.com/" width=" " height=" " alt="соцсеть INSTA"></a></li>
   </ul>
-<section class="footer-info">
+  </section>
+<section class="footer-promo">
   <p><b>Давайте дружить, это выгодно!</b></p>
   <p>Скидка 10% для друзей из социальных сетей.</p>
 </section>
