Исправила код в самом конце

--- a/catalog.html
+++ b/catalog.html
@@ -123,5 +123,6 @@
         <p><b>Давайте дружить, это выгодно!</b></p>
         <p>Скидка 10% для друзей из социальных сетей.</p>
       </section>
-      </footer>
-</main>
+    </footer>
+</body>
+</html>
