--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <a><img src="https://via.placeholder.com/" width="209" height="90" alt="Логотип студии Нёрдс">
         </a>
         <ul>
-            <li><a href="#">Студия</a></li>
-            <li><a href="#">Клиенты</a></li>
-            <li><a href="#">Магазин</a></li>
-            <li><a href="#">Контакты</a></li>
-            <li><a href="#">Корзина</a></li>
+            <li><a href="http://catalog.html">Студия</a></li>
+            <li><a href="http://catalog.html">Клиенты</a></li>
+            <li><a href="http://catalog.html">Магазин</a></li>
+            <li><a href="http://catalog.html">Контакты</a></li>
+            <li><a href="http://catalog.html">Корзина</a></li>
         </ul>
     </nav>
     <p>Долго, дорого,<br>скрупулезно.</p>
