--- a/catalog.html
+++ b/catalog.html
@@ -73,8 +73,8 @@
         <li><a href="#">ПО ЦЕНЕ</a></li>
         <li><a href="#">ПО ТИПУ</a></li>
         <li><a href="#">ПО НАЗВАНИЮ</a></li>
-        <li><a href="#">треугольник 1</a></li>
-        <li><a href="#">треугольник 2</a></li>
+        <li><a href="#">треугольничек 1</a></li>
+        <li><a href="#">треугольничек 2</a></li>
     </ul>
     <ul>
         <li>
