ДЗ 3_добавление изображений

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
 <body>
     <header class="main-header catalog">
     <nav>
-        <a href="/index.html"><img src="https://via.placeholder.com/" width="209" height="90" alt="Логотип студии Нёрдс">
+        <a href="index.html"><img src="https://via.placeholder.com/" width="209" height="90" alt="Логотип студии Нёрдс">
         </a>
         <ul>
             <li><a href="">Студия</a></li>
@@ -79,37 +79,37 @@
     </ul>
     <ul>
         <li>
-            <img src="https://via.placeholder.com/" width="359" height="578" alt="Седона">
+            <img src="img/sedona.jpg" width="359" height="578" alt="Седона">
             <h3><a href="">SEDONA</a></h3>
             <p>Информационный сайт<br>для туристов</p>
             <button type="button">9 900 ₽</button>
         </li>
         <li> 
-            <img src="https://via.placeholder.com/" width="359" height="578" alt="Пинк">
+            <img src="img/pink.jpg" width="359" height="578" alt="Пинк">
             <h3><a href="">SEDONA</a></h3>
             <p>Информационный сайт<br>для туристов</p>
             <button type="button">9 900 ₽</button>
         </li>
         <li> 
-            <img src="https://via.placeholder.com/" width="359" height="578" alt="Бородинский">
+            <img src="img/borodinsky.jpg" width="359" height="578" alt="Бородинский">
             <h3><a href="">SEDONA</a></h3>
             <p>Информационный сайт<br>для туристов</p>
             <button type="button">9 900 ₽</button>
         </li>
         <li> 
-            <img src="https://via.placeholder.com/" width="359" height="578" alt="Мишка">
+            <img src="img/mishka.jpg" width="359" height="578" alt="Мишка">
             <h3><a href="">SEDONA</a></h3>
             <p>Информационный сайт<br>для туристов</p>
             <button type="button">9 900 ₽</button>
         </li>
         <li> 
-            <img src="https://via.placeholder.com/" width="359" height="578" alt="А плюс">
+            <img src="img/aplus.jpg" width="359" height="578" alt="А плюс">
             <h3><a href="">SEDONA</a></h3>
             <p>Информационный сайт<br>для туристов</p>
             <button type="button">9 900 ₽</button>
         </li>
         <li> 
-            <img src="https://via.placeholder.com/" width="359" height="578" alt="Кваст">
+            <img src="img/kvast.jpg" width="359" height="578" alt="Кваст">
             <h3><a href="">SEDONA</a></h3>
             <p>Информационный сайт<br>для туристов</p>
             <button type="button">9 900 ₽</button>
