--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="">Студия</a></li>
             <li><a href="">Клиенты</a></li>
-            <li><a href="/catalog.html">Магазин</a></li>
+            <li><a href="catalog.html">Магазин</a></li>
             <li><a href="">Контакты</a></li>
             <li><a href="">Корзина</a></li>
         </ul>
@@ -57,6 +57,7 @@
       <li><p>Слайдшоу и видео для корпоративных презентаций</p></li>
     </ul>
     </section>
+    <img src="img/nerds-illustration.jpg" width="360" height="208" alt="Нёрдс справа">
     <p>С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</p>
       <table>
         <tr>
@@ -86,7 +87,7 @@
   <img src="img/map.jpg" width="1440" height="416" alt="карта">
   <section class="footer-info">
   <ul>
-    <li><a><img src="https://via.placeholder.com/" width=" " height=" " alt="соцсеть VK"></a></li>
+    <!--судя по тому, что я не вижу отображения, прикреплено неверно. Или это из-за того, что он как бы Invisible?--> <li><a><img src="img/vk-icon.svg" width="26,01" height="15" alt="соцсеть VK"></a></li>
     <li><a><img src="https://via.placeholder.com/" width=" " height=" " alt="соцсеть FB"></a></li>
     <li><a><img src="https://via.placeholder.com/" width=" " height=" " alt="соцсеть INSTA"></a></li>
   </ul>
