Исправления_добавление изображений

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Нёрдс</title>
+  <!--видимо, вообще всё не так, раз не появляется она-->
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="favicon/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="favicon/180.png">
 </head>
 
 <body>
     <header class="main-header">
     <nav>
-        <a><img src="https://via.placeholder.com/" width="209" height="90" alt="Логотип студии Нёрдс">
+        <a><img src="logo/nerds-logo.png" width="159,87" height="65,02" alt="Логотип студии Нёрдс">
         </a>
         <ul>
             <li><a href="">Студия</a></li>
@@ -57,7 +61,7 @@
       <li><p>Слайдшоу и видео для корпоративных презентаций</p></li>
     </ul>
     </section>
-    <img src="img/nerds-illustration.jpg" width="360" height="208" alt="Нёрдс справа">
+    <!--раз фоновая, значит будет добавляться посредством background в css?-->
     <p>С 2004 ГОДА ЛЮБИМ ТОЧНОСТЬ ВО ВСЕМ:</p>
       <table>
         <tr>
@@ -72,10 +76,10 @@
       </tr>
     </table>
   <section class="partners">
-    <a href="#"><img src="https://via.placeholder.com/" width=" " height=" " alt="Лого Академии"></a>
-    <a href="#"><img src="https://via.placeholder.com/" width=" " height=" " alt="Лого Бородинский"></a>
-    <a href="#"><img src="https://via.placeholder.com/" width=" " height=" " alt="Лого Пинк"></a>
-    <a href="#"><img src="https://via.placeholder.com/" width=" " height=" " alt="Лого Мишка"></a>
+    <a href="#"><img src="academy-logo.png" width="199" height="67,82" alt="Лого Академии"></a>
+    <a href="#"><img src="borod-logo.png" width="209" height="90" alt="Лого Бородинский"></a>
+    <a href="#"><img src="pink-logo.png" width="185" height="52" alt="Лого Пинк"></a>
+    <a href="#"><img src="mishka-logo.png" width="173" height="84" alt="Лого Мишка"></a>
   </section>
 </main>
 
@@ -83,11 +87,11 @@
   <h2>NЁRDS DESIGN STUDIO</h2>
   <p>191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8<br>тел. +7 (812) 275-75-75</p>
   <a href="#">НАПИШИТЕ НАМ</a>
-  <img src="img/mark.jpg" width="231" height="190" alt="Точка Нёрдс на карте">
+  <img src="img/mark.png" width="231" height="190" alt="Точка Нёрдс на карте">
   <img src="img/map.jpg" width="1440" height="416" alt="карта">
   <section class="footer-info">
   <ul>
-    <!--судя по тому, что я не вижу отображения, прикреплено неверно. Или это из-за того, что он как бы Invisible?--> <li><a><img src="img/vk-icon.svg" width="26,01" height="15" alt="соцсеть VK"></a></li>
+    <!--раз их стилизуют как фоновые, то просто удаляю отсюда?--> <li><a><img src="img/vk-icon.svg" width="26,01" height="15" alt="соцсеть VK"></a></li>
     <li><a><img src="https://via.placeholder.com/" width=" " height=" " alt="соцсеть FB"></a></li>
     <li><a><img src="https://via.placeholder.com/" width=" " height=" " alt="соцсеть INSTA"></a></li>
   </ul>
