--- a/catalog.html
+++ b/catalog.html
@@ -7,8 +7,8 @@
 <body>
     <header class="main-header catalog">
     <nav>
-        <a href="index.html"><img src="https://via.placeholder.com/" width="209" height="90" alt="Логотип студии Нёрдс">
-        </a>
+      <a><img src="logo/nerds-logo.png" width="159,87" height="65,02" alt="Логотип студии Нёрдс">
+      </a>
         <ul>
             <li><a href="">Студия</a></li>
             <li><a href="">Клиенты</a></li>
@@ -135,7 +135,7 @@
         <h2>NЁRDS DESIGN STUDIO</h2>
         <p>191186, Санкт-Петербург,<br>ул. Б. Конюшенная, д. 19/8<br>тел. +7 (812) 275-75-75</p>
         <a href="#">НАПИШИТЕ НАМ</a>
-        <img src="img/mark.jpg" width="231" height="190" alt="Точка Нёрдс на карте">
+        <img src="img/mark.png" width="231" height="190" alt="Точка Нёрдс на карте">
         <img src="img/map.jpg" width="1440" height="416" alt="карта">
         <section class="footer-info">
         <ul>
