--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <title>Нёрдс</title>
   <link rel="icon" href="favicon.ico">
-  <link rel="icon" href="icon.svg" type="image/svg+xml">
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="favicon/180.png">
 </head>
 
 <body>
     <header class="main-header">
     <nav>
-        <a><img src="logo/nerds-logo.png" width="160" height="65" alt="Логотип студии Нёрдс">
+        <a><img src="logo/nerds-logo.png" width="160" height="66" alt="Логотип студии Нёрдс">
         </a>
         <ul>
             <li><a href="">Студия</a></li>
@@ -87,6 +87,13 @@
   <a href="#">НАПИШИТЕ НАМ</a>
   <img src="img/mark.png" width="231" height="190" alt="Точка Нёрдс на карте">
   <img src="img/map.jpg" width="1440" height="416" alt="карта">
+  <section class="footer-info">
+    <ul>
+      <li><img src="https://via.placeholder.com/" width=" " height=" " alt="соцсеть VK"></li>
+      <li><img src="https://via.placeholder.com/" width=" " height=" " alt="соцсеть FB"></li>
+      <li><img src="https://via.placeholder.com/" width=" " height=" " alt="соцсеть INSTA"></li>
+    </ul>
+    </section>
 <section class="footer-promo">
   <p><b>Давайте дружить, это выгодно!</b></p>
   <p>Скидка 10% для друзей из социальных сетей.</p>
