--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
 <body>
     <header class="main-header catalog">
     <nav>
-      <a><img src="logo/nerds-logo.png" width="160" height="66" alt="Логотип студии Нёрдс">
+      <a href="index.html"><img src="img/nerds-logo.png" width="160" height="66" alt="Логотип студии Нёрдс">
       </a>
         <ul>
             <li><a href="">Студия</a></li>
@@ -61,8 +61,8 @@
         <li><a href="#">ПО ЦЕНЕ</a></li>
         <li><a href="#">ПО ТИПУ</a></li>
         <li><a href="#">ПО НАЗВАНИЮ</a></li>
-        <li><a href="#">треугольничек 1</a></li>
-        <li><a href="#">треугольничек 2</a></li>
+        <li><a href="#">от большего к меньшему</a></li>
+        <li><a href="#">от меньшего к большему</a></li>
     </ul>
     <ul>
         <li>
