--- a/catalog.html
+++ b/catalog.html
@@ -27,12 +27,10 @@
     </header>
   </div>
 
-<div class="catalog-grid">
+
 <main>
-  <div class="filter1">
-    <h2>Фильтр товаров</h2>
-    <form method="get" action="https://echo.htmlacademy.ru">
-      <fieldset>
+  <div class="catalog-grid">
+    <div class="list">
         <legend class="filter">Стоимость:</legend>
         <ul>
             <li>
@@ -60,13 +58,12 @@
       </fieldset>
 
       <button type="submit">Показать</button>
-
     </form>
   </div>
-     </div>
+</div>
 
-  <div class="sorting">
-    <h2>Список сайтов</h2>
+<div class="catalog">
+     <h2>Список сайтов</h2>
     <h5 class="filter">Сортировать:</h5>
     <ul>
         <li><a class="price" href="#">ПО ЦЕНЕ</a></li>
